src/features/events_list/components/EventsPanel/EventsPanel.module.css
.panelIcon.desktop {
  display: none;
  z-index: 1;
}

.truncated {
  max-width: 100px;
  & > span {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

.combinedHeader {
  display: flex;
  width: 100%;
  justify-content: space-between;
  & .eventNameLabel {
    display: flex;
    align-items: center;
    border-radius: calc(var(--border-radius-unit) * 3);
    background-color: var(--faint-weak);
    padding: 0 var(--unit);
    & > span {
      font: var(--font-xs);
      font-weight: 500;
    }
  }
}

.iconWrap {
  display: flex;
}

/* Overrides hardcoded color in the lib */
.backdrop {
  background-color: rgba(0, 0, 0, 0.3) !important;
}

.eventsPanel {
  position: relative;
  overflow: hidden;
  flex: 1;

  &.show > .contentWrap {
    display: flex;
    height: 100%;
    padding-bottom: var(--unit);
  }

  &.collapse {
    display: block;
    flex: none;
    & > .contentWrap {
      display: none;
    }
  }
}

/* mobile */
@media screen and (max-width: 960px) {
  .eventsPanel {
    border-radius: calc(var(--border-radius-unit) * 2);
  }
}

